# 1D-Heat-Equation

./: .gitignore  README.md  main.py  pyproject.toml
cpp/: CMakeLists.txt  binding.cpp  heat_equation.cpp  heat_equation.h
python/: gui.py
